--- a/my.catalog/res/values/strings.xml
+++ b/my.catalog/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="catalog_map">Navegar</string>
     <string name="loading">Lendo catálogo.</string>
     <string name="be_cool">Fique tranquilo que é só desta vez...</string>
+    <string name="update_catalog">Atualizar catálogo</string>
 
 </resources>
